--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-router-dom": "^4.3.1"
-  }
+  "devDependencies": {}
 }
